menambahkan style di file main.css

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -555,6 +555,30 @@ section {
   color: rgba(var(--color-black-rgb), 1);
 }
 
+.with-border {
+  border: 100px;
+  border-radius: 30px; /* Membuat border dengan sudut bulat */
+}
+
+ .border-heading-text {
+  border: 100px;
+  border-radius: 30px; /* Atur ketebalan dan jenis border */
+  padding: 20px 20px; /* Jarak antara teks dan border */
+  margin: 10px; /* Jarak antara border dan elemen sekitarnya */
+  color: #fff;
+  
+  /* Gradient linear sebagai latar belakang border */
+  background: linear-gradient(to right, #57381F 30%, #D99566); /* Warna gradient dari #57381F ke #FFFFFF */
+  -webkit-background-clip: border-box; /* Gunakan background untuk border-box */
+  background-clip: border-box; /* Gunakan background untuk border-box */
+}
+
+.img-2{
+  width: 500px;
+  height: 140px;
+
+}
+
 .trending .trending-post li:last-child a {
   border-bottom: none;
 }
