--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -573,7 +573,7 @@ section {
   background-clip: border-box; /* Gunakan background untuk border-box */
 }
 
-.img-2{
+.img-2{ /*gambar wayang 2*/
   width: 500px;
   height: 140px;
 
