--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -573,7 +573,7 @@ section {
   background-clip: border-box; /* Gunakan background untuk border-box */
 }
 
-.img-2{
+.img-2{ /*gambar wayang 2*/
   width: 500px;
   height: 140px;
 
@@ -619,6 +619,16 @@ section {
   flex: 0 0 50%;
   margin-bottom: 20px;
 
+}
+
+.img-3 {/*gambar 3 */
+  width: 60%;
+  height: auto;
+  
+}
+
+.Deskripsi-paragraf {
+  padding: 20px;
 }
 
 
