mengganti warna zeus

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -137,7 +137,7 @@ section {
 .header .logo h1 {
   font-size: 30px;
   font-weight: 700;
-  color: var(--color-default);
+  color: #fff;
   font-family: var(--font-primary);
 }
 
