--- a/assets/css/beranda.css
+++ b/assets/css/beranda.css
@@ -208,6 +208,7 @@ section {
 @media (min-width: 1280px) {
   .navbar {
     padding: 0;
+
   }
 
 
@@ -561,35 +562,57 @@ section {
   border-bottom: none;
 }
 
+/*--------------------------------------------------------------
+# Wayang Kulit 
+--------------------------------------------------------------*/
 .post-entry-2 {
   margin-bottom: 30px;
 }
-.with-border {
+
+.img-1{
+  width: 300px;
+  height: 310px;
+
+
+}
+.with-border {   /* BUDAYA NUSANTARA - KOTA MESEUM */
     border: 100px;
-    border-radius: 30px; /* Membuat border dengan sudut bulat */
+    border-radius: 30px; 
 }
 
-   .border-heading-text {
-    border: 100px;
-    border-radius: 30px; /* Atur ketebalan dan jenis border */
-    padding: 20px 20px; /* Jarak antara teks dan border */
-    margin: 10px; /* Jarak antara border dan elemen sekitarnya */
+   .border-heading-text {  
+    border: 200px;
+    border-radius: 30px;
+    padding: 20px 20px; 
+    margin: 10px; 
     color: #fff;
-    
-    /* Gradient linear sebagai latar belakang border */
-    background: linear-gradient(to right, #57381F 30%, #D99566); /* Warna gradient dari #57381F ke #FFFFFF */
-    -webkit-background-clip: border-box; /* Gunakan background untuk border-box */
-    background-clip: border-box; /* Gunakan background untuk border-box */
+    background: linear-gradient(to right, #57381F 30%, #D99566); 
+    -webkit-background-clip: border-box; 
+    background-clip: border-box;
 }
-  .bi-bi-arrow-right-circle-fill{
+.bi-arrow-right {
     width: 100px;
     height: 100px;
-    
-  }
+    margin-top: 10px;
+    font-size: 50px;
+    border-radius: 50%;
+    background-color: #FFF; 
+    color: #000; 
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
   .img-2{
+    border-radius: 30px;
     width: 500px;
     height: 140px;
 
+  }
+
+  .Deskripsi-paragraf{
+    text-align: left;
+    float: right;
   }
 
 
@@ -615,9 +638,12 @@ section {
   
 }
 
+.post-entry-3 {
+  margin-bottom: 30px;
+}
 .img-3{
-  width: auto;
-  height: auto;
+  width: 400px;
+  height: 250px;
 }
 
 @media (max-width: 960px) {
@@ -1185,4 +1211,53 @@ section {
 
 .footer .credits a {
   color: var(--color-white);
+}
+
+/* Tombol tema */
+/* Tombol tema */
+input[type="checkbox"]#darkmode-toggle {
+  display: none; /* Sembunyikan checkbox */
+}
+
+label[for="darkmode-toggle"] {
+  width: 120px;
+  height: 50px;
+  position: relative;
+  display: block;
+  background: #ebebeb;
+  border-radius: 25px;
+  box-shadow: inset 0px 3px 8px rgba(0,0,0,0.4), inset 0px -3px 8px rgba(255,255,255,0.4);
+  cursor: pointer;
+}
+
+label[for="darkmode-toggle"]:after {
+  content: "";
+  width: 40px;
+  height: 40px;
+  position: absolute;
+  top: 5px;
+  left: 5px;
+  background: linear-gradient(180deg, #ffcc89, #d8860b);
+  border-radius: 20px;
+  box-shadow: 0px 3px 5px rgba(0,0,0,0.2);
+  transition: left 0.3s ease;
+}
+
+#darkmode-toggle:checked + label[for="darkmode-toggle"]:after {
+  left: 75px; /* Adjust the position of the after element when checkbox is checked */
+  background: linear-gradient(180deg, #777, #3a3a3a);
+}
+
+/* Background color transition */
+.background {
+  width: 100vw;
+  height: 100vh;
+  background: #fff; /* Default background color */
+  z-index: -1;
+  position: absolute;
+  transition: background 0.3s;
+}
+
+#darkmode-toggle:checked + label[for="darkmode-toggle"] + .background {
+  background: #242424; /* Background color when checkbox is checked */
 }
