--- a/assets/css/beranda.css
+++ b/assets/css/beranda.css
@@ -53,12 +53,36 @@ section {
   margin-bottom: 0;
 }
 
-.background-section {
-        background-image: url('assets/img/wayang/beranda.png');
-        background-size: cover;
-        background-position: center;
-        /* Sesuaikan properti background sesuai kebutuhan */
-        padding: 100px 0; /* Contoh padding untuk memberi jarak dari atas dan bawah */
+
+/*--------------------------------------------------------------
+# Hero Section
+--------------------------------------------------------------*/
+#hero {
+    background-image: url('assets/img/wayang/beranda.png');
+    background-size: cover;
+    background-position: center;
+    position: relative;
+    min-height: 60vh;
+    padding: 160px 0 60px 0;
+}
+
+/* Gaya teks */
+#hero h2 {
+    font-size: 64px;
+    font-weight: 700;
+    margin-bottom: 20px;
+    color: var(--color-secondary);
+    font-family: var(--font-primary);
+}
+
+#hero h2 span {
+    color: var(--color-primary);
+}
+
+#hero p {
+    color: #4f4f5a;
+    font-weight: 400;
+    margin-bottom: 30px;
 }
 
 
