--- a/assets/css/beranda.css
+++ b/assets/css/beranda.css
@@ -54,37 +54,6 @@ section {
 }
 
 
-/*--------------------------------------------------------------
-# Hero Section
---------------------------------------------------------------*/
-#hero {
-    background-image: url('assets/img/wayang/beranda.png');
-    background-size: cover;
-    background-position: center;
-    position: relative;
-    min-height: 60vh;
-    padding: 160px 0 60px 0;
-}
-
-/* Gaya teks */
-#hero h2 {
-    font-size: 64px;
-    font-weight: 700;
-    margin-bottom: 20px;
-    color: var(--color-secondary);
-    font-family: var(--font-primary);
-}
-
-#hero h2 span {
-    color: var(--color-primary);
-}
-
-#hero p {
-    color: #4f4f5a;
-    font-weight: 400;
-    margin-bottom: 30px;
-}
-
 
 /*--------------------------------------------------------------
 # Scroll top button
@@ -369,6 +338,28 @@ section {
 .mobile-nav-toggle {
   display: none;
 }
+
+.button-nav {
+    border: 2px solid #57381F; /* Menambahkan border solid dengan warna yang ditentukan */
+    border-radius: 30px; /* Menentukan radius sudut */
+    background-color: #57381F; /* Warna latar belakang */
+    color: #FFF; /* Warna teks */
+    padding: 10px 20px; /* Padding di dalam tombol */
+    text-align: center; /* Posisi teks ke tengah */
+    text-decoration: none; /* Menghapus dekorasi teks */
+    display: inline-block; /* Agar tombol tidak menempati ruang yang lebar */
+    font-size: 16px; /* Ukuran teks */
+    margin: 10px; /* Menambahkan jarak di sekitar tombol */
+    cursor: pointer; /* Mengubah kursor saat dihover ke pointer */
+    transition: background-color 0.3s, color 0.3s; /* Efek transisi saat hover */
+}
+
+/* Efek hover */
+.button-nav:hover {
+    background-color: #000; /* Ubah warna latar belakang saat tombol dihover */
+    color: #FFF; /* Ubah warna teks saat tombol dihover */
+}
+
 
 /*--------------------------------------------------------------
 # Mobile Navigation
