--- a/assets/css/beranda.css
+++ b/assets/css/beranda.css
@@ -6,8 +6,14 @@
 }
 
 body {
-  color: rgba(var(--color-primary-rgb), 1);
+margin: 0;
+  padding: 0;
+  font-family: Arial, sans-serif;
+  background-color: #BE6D2C; /* Warna awal latar belakang body */
+  background-image: linear-gradient(to bottom,  #BE6D2C, #583214); /* Gradien linear dari atas ke bawah dari #BE6D2C ke #583214 */
 }
+
+
 
 a {
   color: white;
@@ -29,6 +35,7 @@ h6 {
 }
 
 #main {
+  
   margin-top: 90px;
 }
 
@@ -430,7 +437,7 @@ section {
 
   .mobile-nav-toggle {
     display: inline-block;
-    color: var(--color-secondary);
+    color: #fff;
     font-size: 28px;
     cursor: pointer;
     line-height: 0;
@@ -465,6 +472,74 @@ section {
     display: block;
   }
 }
+
+/*--------------------------------------------------------------
+# Hero Section
+--------------------------------------------------------------*/
+#hero {
+  width: 100%;
+  height: 100vh;
+  background: linear-gradient(to bottom, rgba(255, 255, 255, 0) 0%, rgba(217, 217, 217, 0.6) 180% ), url("../img/wayang/beranda.png") top left;
+  background-size: cover;
+  position: relative;
+}
+
+/* Efek fading dengan overlay pada bagian bawah gambar */
+#hero:after {
+  content: "";
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  width: 100%;
+  height: 100px; /* Sesuaikan tinggi overlay sesuai kebutuhan */
+  background: linear-gradient(to bottom, rgba(255, 255, 255, 0) 0%, rgba(217, 217, 217, 0.6) 100%);
+}
+
+/* Styling untuk teks */
+#hero .container {
+  position: relative;
+}
+
+#hero h1 {
+  margin: 0;
+  font-size: 48px;
+  font-weight: 700;
+  line-height: 56px;
+  color: #fff;
+  font-family: "Poppins", sans-serif;
+}
+
+#hero h2 {
+  color: #925A2C;
+  margin: 5px 0 30px 0;
+  font-size: 24px;
+  font-weight: 400;
+}
+
+@media (max-width: 768px) {
+  #hero {
+    height: 100vh;
+  }
+
+  #hero h1 {
+    font-size: 28px;
+    line-height: 36px;
+  }
+
+  #hero h2 {
+    font-size: 18px;
+    line-height: 24px;
+    margin-bottom: 30px;
+  }
+
+}
+
+@media (max-height: 500px) {
+  #hero {
+    height: 120vh;
+  }
+}
+
 
 /*--------------------------------------------------------------
 # Posts
