--- a/assets/css/beranda.css
+++ b/assets/css/beranda.css
@@ -12,6 +12,10 @@ body {
       background-image: linear-gradient(to bottom,  #BE6D2C, #583214); /* Gradien linear dari atas ke bawah dari #BE6D2C ke #583214 */
       position: relative; /* Menjadikan posisi relatif agar overlay dapat ditambahkan */
     }
+
+
+
+
 a {
   color: white;
   text-decoration: none;
@@ -98,7 +102,23 @@ section {
 .page-title {
   font-size: 70px;
   color: var(--color-black);
+  text-align: center; /* Mengatur teks ke tengah secara horizontal */
+  display: flex; /* Mengatur pemosisian vertikal */
+  justify-content: center; /* Mengatur teks ke tengah secara vertikal */
+  align-items: flex-end; /* Mengatur teks ke bawah secara vertikal */
 }
+.page-title1 {
+  font-size: 70px;
+  color: var(--color-black);
+  text-align: center; /* Mengatur teks ke tengah secara horizontal */
+  display: flex; /* Mengatur pemosisian vertikal */
+  justify-content: center; /* Mengatur teks ke tengah secara vertikal */
+  align-items: flex-end; /* Mengatur teks ke bawah secara vertikal */
+  text-shadow: #000;
+}
+
+
+
 
 /* Form Input Fieldds */
 .form-control:active,
@@ -476,10 +496,14 @@ section {
 #hero {
   width: 100%;
   height: 100vh;
-  background: linear-gradient(to bottom, rgba(255, 255, 255, 0) 0%, rgba(217, 217, 217, 0.6) 180% ), url("../img/wayang/beranda.png") top left;
+  background: 
+    linear-gradient(to bottom, rgba(255, 255, 255, 0.079) 80%, rgba(150, 86, 35, 1) 100%),
+    url("../img/wayang/beranda.png") top left;
   background-size: cover;
+  background-repeat: no-repeat;
   position: relative;
 }
+
 
 /* Efek fading dengan overlay pada bagian bawah gambar */
 #hero:after {
@@ -488,13 +512,14 @@ section {
   bottom: 0;
   left: 0;
   width: 100%;
-  height: 100px; /* Sesuaikan tinggi overlay sesuai kebutuhan */
-  background: linear-gradient(to bottom, rgba(255, 255, 255, 0) 0%, rgba(217, 217, 217, 0.6) 100%);
+  height: 100px; /* Sesuaikan tinggi overlay sesuai kebutuhan 
+  background: linear-gradient(to bottom, rgba(255, 255, 255, 0) 0%, rgba(217, 217, 217, 0.6) 100%); */
 }
 
 /* Styling untuk teks */
 #hero .container {
   position: relative;
+  text-align: center; /* Menengahkan teks */
 }
 
 #hero h1 {
@@ -504,14 +529,16 @@ section {
   line-height: 56px;
   color: #fff;
   font-family: "Poppins", sans-serif;
+  text-shadow: 5px 5px 5px black; /* Efek shadow untuk membuat garis hitam di sekitar huruf */
 }
-
 #hero h2 {
-  color: #925A2C;
+  color: #fff; /* Warna teks putih */
   margin: 5px 0 30px 0;
   font-size: 24px;
   font-weight: 400;
+  text-shadow: 0px 0px 5px #925A2C; /* Efek shadow dengan warna yang cukup kontras */
 }
+
 
 @media (max-width: 768px) {
   #hero {
@@ -541,6 +568,8 @@ section {
 /*--------------------------------------------------------------
 # Posts
 --------------------------------------------------------------*/
+
+
 .post-entry-1 {
   margin-bottom: 30px;
 }
